<resources>
    <string name="app_name">Plastic</string>
    <string name="cargando">Cargando...</string>
    <string name="plastic">Plastic</string>
    <string name="bienvenido_a">Bienvenido a</string>
    <string name="ingrese_su_usuario">Ingrese su usuario...</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña...</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="olvidaste_la_contrase_a_presiona_en">¿Olvidaste la contraseña? presiona en</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="ingrese_sus_credenciales">Ingrese sus credenciales...</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="nickname">Nickname</string>
    <string name="contrase_a">Contraseña</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="direcci_n">Dirección</string>
    <string name="username">Username</string>
    <string name="c_dula">Cédula</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="crear_solicitud">Crear Solicitud</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingrese_su_correo">Ingrese su correo...</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="listar_solicitudes">Listar Solicitudes</string>
    <string name="descr_benos_como_llegar">Descríbenos como llegar</string>
    <string name="registra_tu_entrega">Registra tu Entrega</string>
    <string name="describenos_tu_entrega">Describenos tu entrega</string>
    <string name="t_n_mero_de_tel_fono">Tú número de teléfono</string>
    <string name="hora_de_recoger">Hora de recoger</string>
    <string name="punto_de_entrega">Punto de entrega</string>
    <string name="solicitudes_pendientes">Solicitudes Pendientes</string>
    <string name="como_llegar">Como llegar</string>
    <string name="nos_entrega">Nos entrega</string>
    <string name="numero_de_contacto">Numero de contacto</string>
    <string name="fecha_y_hora">Fecha y Hora</string>
    <string name="tipo_de_usuario">Tipo de Usuario</string>
    <string name="actualizar_perfil">Actualizar Perfil</string>
    <string name="sobre_m">Sobre mí</string>
    <string name="actualizar_mi_perfil">Actualizar Mi Perfil</string>
    <string name="informaci_n_detallada">Información Detallada</string>
    <string name="nombres_y_apellidos_completos_del_usuario">Nombres y Apellidos Completos del usuario</string>
    <string name="restablecer_contrase_a">Restablecer Contraseña</string>
    <string name="eliminar_solicitud">Eliminar Solicitud</string>
</resources>