<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actualizar_mi_perfil"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="26sp"
        />

    <EditText
        android:id="@+id/nombreEditText"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:inputType="text"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/nombres" />

    <EditText
        android:id="@+id/apellidoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:inputType="text"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/apellidos" />

    <EditText
        android:id="@+id/telefonoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="phone"
        android:inputType="phone"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/telefono" />

    <EditText
        android:id="@+id/correoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:inputType="text"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/identificationCardEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:inputType="text"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/c_dula" />

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="text"
        android:inputType="text"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/direcci_n" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="text"
        android:inputType="text"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/sobre_m" />

</LinearLayout>
