<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.view.activity.RegisterActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="46sp"
        android:fontFamily="@font/kavoon"
        android:text="@string/registra_tu_entrega"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <EditText
        android:id="@+id/editTextDeliveryAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/punto_de_entrega"
        android:autofillHints="name"
        android:inputType="text"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textAlignment="center"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        />

    <EditText
        android:id="@+id/editTextLocationDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descr_benos_como_llegar"
        android:autofillHints="name"
        android:inputType="textMultiLine"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_border"
        android:lines="3"
        android:minLines="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextDeliveryAddress"
        />

    <EditText
        android:id="@+id/editTextDeliveryDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/describenos_tu_entrega"
        android:autofillHints="username"
        android:inputType="textMultiLine"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_border"
        android:lines="3"
        android:minLines="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextLocationDescription"
        />


    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/t_n_mero_de_tel_fono"
        android:autofillHints="phone"
        android:inputType="phone"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextDeliveryDescription"
        />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hora_de_recoger"
        android:autofillHints="text"
        android:inputType="text"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPhone"
        />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/registrar"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:backgroundTint="@color/green"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime"
        />

</androidx.constraintlayout.widget.ConstraintLayout>