<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.view.activity.LoginActivity">

    <TextView
        android:id="@+id/textViewTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:text="@string/bienvenido_a"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/kavoon"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo1"
        app:civ_border_color="#FEC613"
        app:civ_border_width="2dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewTittle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="101dp" />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/ingrese_su_correo"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
        />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/ingrese_su_contrase_a"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextUser"
        />


    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/ingresar"
        android:textSize="22sp"
        android:backgroundTint="@color/green"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPass"
        />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/registrar"
        android:textSize="22sp"
        android:backgroundTint="@color/green"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        android:textAllCaps="false"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        />

    <TextView
        android:id="@+id/textViewTopPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/olvidaste_la_contrase_a_presiona_en"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonRegister"
        />

    <TextView
        android:id="@+id/textViewRecoverPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recuperar_contrase_a"
        android:layout_marginTop="10dp"
        android:textColor="@color/green_light"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/kavoon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTopPass"
        />


</androidx.constraintlayout.widget.ConstraintLayout>