<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green"
        android:padding="10dp">

        <TextView
            android:id="@+id/textViewPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/punto_de_entrega"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/textViewDescriptionLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:text="@string/como_llegar"
            app:layout_constraintTop_toBottomOf="@+id/textViewPoint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/textViewDescriptionDelivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nos_entrega"
            android:textStyle="bold"
            android:textSize="18sp"
            android:visibility="gone"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewDescriptionLocation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/textVievPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numero_de_contacto"
            android:textStyle="bold"
            android:textSize="18sp"
            android:visibility="gone"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewDescriptionDelivery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/textVievTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha_y_hora"
            android:textStyle="bold"
            android:textSize="18sp"
            android:visibility="gone"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textVievPhone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
