<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.view.activity.DetailDeliveryActivity"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/detailedInfoHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/informaci_n_detallada"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="35dp"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="3dp"
            android:contentDescription="@null"
            android:src="@drawable/arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textViewPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/punto_de_entrega"
            android:textColor="@color/green_yellow"
            android:textSize="26sp"
            android:padding="3dp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailedInfoHeader" />

        <TextView
            android:id="@+id/textViewDescriptionLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/como_llegar"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"
            android:padding="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPoint" />

        <TextView
            android:id="@+id/textViewDescriptionDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nos_entrega"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="3dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDescriptionLocation" />

        <TextView
            android:id="@+id/textVievPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/numero_de_contacto"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:padding="3dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDescriptionDelivery" />

        <TextView
            android:id="@+id/textVievTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/fecha_y_hora"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="3dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textVievPhone" />


        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/eliminar_solicitud"
            android:textSize="22sp"
            android:backgroundTint="@color/green"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:cornerRadius="20dp"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textVievTime"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
